--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/_LayoutManage.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/_LayoutManage.cshtml
@@ -7,16 +7,15 @@
 }
 
 <!-- Header -->
-<div class="header pb-6 d-flex align-items-center" style="min-height: 500px; background-image: url(../../assets/img/theme/profile-cover.jpg); background-size: cover; background-position: center top;">
+<div class="header pb-6 d-flex align-items-center" style="min-height: 300px; background-image: url(https://demos.creative-tim.com/argon-dashboard-pro/assets/img/theme/profile-cover.jpg); background-size: cover; background-position: center top;">
     <!-- Mask -->
     <span class="mask bg-gradient-default opacity-8"></span>
     <!-- Header container -->
     <div class="container-fluid d-flex align-items-center">
         <div class="row">
-            <div class="col-lg-7 col-md-10">
-                <h1 class="display-2 text-white">Hello Jesse</h1>
-                <p class="text-white mt-0 mb-5">This is your profile page. You can see the progress you've made with your work and manage your projects or assigned tasks</p>
-                <a href="#!" class="btn btn-neutral">Edit profile</a>
+            <div class="col-10">
+                <h1 class="display-2 text-white">Hello @User.Identity.Name</h1>
+                <p class="text-white">This is your profile page. You can see the progress you've made with your work and manage your projects or assigned tasks</p>
             </div>
         </div>
     </div>
